# AliceTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/include/: accelerate_struct.h  brdf.h  bxdf.h  camera.h  color.h  hittable.h  hittable_cluster.h  image.h  integrator.h  intersection_solver.h  material.h  movement.h  object.h  post_process.h  random_variable.h  ray.h  sampler.h  scene.h  tone_mapping.h
core/src/: accelerate_struct.cpp  bxdf.cpp  camera.cpp  hittable.cpp  hittable_cluster.cpp  image.cpp  integrator.cpp  intersection_solver.cpp  movement.cpp  object.cpp  sampler.cpp  scene.cpp
example/: CMakeLists.txt  main.cpp
example/cornell_box/: CMakeLists.txt  cornell_box.cpp  main.cpp
example/cornell_room/: CMakeLists.txt  main.cpp
example/playground/: CMakeLists.txt  playground.cpp
example/primitives/: CMakeLists.txt  primitives.cpp
examples/: CMakeLists.txt
examples/cornell_box/: CMakeLists.txt  cornell_box.cpp
examples/materials/: CMakeLists.txt  materials.cpp
examples/opencl_demo/: CMakeLists.txt  playground.cpp  vector_add_kernel.cl
examples/playground/: playground.cpp
examples/primitives/: CMakeLists.txt  primitives.cpp
examples/white_room/: CMakeLists.txt  white_room.cpp
interface/: CMakeLists.txt
interface/include/: imgui_widgets.h  model_loader.h  render_texture.h  texture.h  window.h
interface/src/: imgui_widgets.cpp  model_loader.cpp  render_texture.cpp
third_parties/assimp/lib/: assimp
utils/: CMakeLists.txt
utils/include/: alice_common.h  alice_file.h  alice_image.h  alice_log.h  alice_math.h  alice_threads.h
